2001-03-16  J.T. Conklin  <jtc@redback.com>

	* config/h8300/tm-h8300.h (FRAME_ARGS_ADDRESS): Changed to use
	h8300_frame_args_address from frame_args_address.
	(FRAME_LOCALS_ADDRESS): Changed to use h8300_frame_locals_address
	from frame_locals_address.
	(PRINT_REGISTER_HOOK): Changed to use h8300_print_register_hook
	from print_register_hook.
	(h8300_frame_args_address): Declare.
	(h8300_frame_find_saved_regs): Declare.
	(h8300_frame_locals_address): Declare.
	(h8300_frame_saved_pc): Declare.
	(h8300_pop_frame): Declare.
	(h8300_print_register_hook): Declare.
	* h8300-tdep.c (h8300_frame_find_saved_regs): Removed declaration.
	(h8300_frame_args_address): Renamed from frame_args_address.
	(h8300_frame_locals_address): Renamed from frame_locals_address.
	(h8300_pop_frame): Renamed from pop_frame.
	(h8300_print_register_hook): Renamed from print_register_hook.

2001-03-16  Kevin Buettner  <kevinb@redhat.com>

	* solib-svr4.c (bfd_lookup_symbol):  Change type of
	``storage_needed'' from unsigned int to long in order to
	match return type of bfd_get_symtab_upper_bound() and
	bfd_get_dynamic_symtab_upper_bound().
	* solib-aix5.c (bfd_lookup_symbol): Likewise.  Also, eliminate
	REASONABLE_LIMIT hack which had been added to work around this
	problem.

2001-03-15  Kevin Buettner  <kevinb@redhat.com>

	* solib-aix5.c (bfd_lookup_symbol, build_so_list_from_mapfile)
	(aix5_relocate_main_executable, aix5_clear_solib): Replace calls
	to free() with calls to xfree().
	(bfd_lookup_symbol): Eliminate use of PTR.
	(build_so_list_from_mapfile): Use xasprintf() instead of sprintf().

2001-03-15  Martin Hunt  <hunt@redhat.com>

	* linespec.c (decode_line_1): Remove trailing quote
	when parsing double quotes.

2001-03-15  Kevin Buettner  <kevinb@redhat.com>

	* uw-thread.c (read_thr_debug, read_map, read_lwp, thread_iter)
	(libthread_stub, libthread_init): Pass NULL for the mem_attrib
	argument in the to_xfer_memory calls.

2001-03-15  Andrew Cagney  <ac131313@redhat.com>
